--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+        <!--link a bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!--link al css-->
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
@@ -16,14 +18,35 @@
     <body class="body">
         <header>
             <div class="nav">
-                <nav>
-                    <ul>
-                        <li class="logo"><a href="index.html"><!--<img src="assets/lvplogo.png">-->Inicio</a></li>
-                        <li><a href="pages/discografia.html">Discografia</a></li>
-                        <li><a href="pages/galeria.html">Galeria</a></li>
-                        <li><a href="pages/shows.html">Shows</a></li>
-                        <li><a href="pages/bio.html">Bio</a></li>
-                        </ul>
+                <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img src="assets/logo-white.png" width="40px"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages/discografia.html">Discografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages/galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages/shows.html">Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="pages/bio.html">Bio</a>
+                    </li>
+                </ul>
+                </div>
+                </div>
+                </div>
                 </nav>
             </div>
         </header>
@@ -50,5 +73,7 @@
             </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
         </footer>
+        <!--script bootstrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
