--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+        <!--link a bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!--link al css-->
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
@@ -16,25 +18,100 @@
     <body class="body">
         <header>
             <div class="nav">
-                <nav>
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="discografia.html">Discografia</a></li>
-                        <li><a href="galeria.html">Galeria</a></li>
-                        <li><a href="shows.html">Shows</a></li>
-                        <li><a href="bio.html">Bio</a></li>
-                    </ul>
+                <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="shows.html">Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
+                    </li>
+                </ul>
+                </div>
+                </div>
+                </div>
                 </nav>
             </div>
         </header>
         <main>
-            <section class="galeria">
+            <div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 0"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../assets/lavela.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>La banda completa en 2007</h5>
+        <p>Luego de sacar "El Impuslo" en una gira por europa.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="../assets/LaVelaPerca-en-gira-2022.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>El "Enano" y el "Cebolla"</h5>
+        <p>El dúo se mantiene unido desde el primer día.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="../assets/enano.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>El "Enano"</h5>
+        <p>En una etapa más madura, dedica una parte de cada show para cantar solo con el público.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <iframe class="d-block w-100" alt="..." width="100%" height="700" src="https://www.youtube.com/embed/wjhxTWdqZVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Video</h5>
+        <p>Muestra.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <iframe class="d-block w-100" alt="..." width="100%" height="700" src="https://www.youtube.com/embed/OspIA4akQeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Video 2</h5>
+        <p>Muestra 2</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+            <!--<section class="galeria">
                 <img src="../assets/lavela.jpg" alt="banda" class="banda">
                 <img src="../assets/LaVelaPerca-en-gira-2022.jpg" alt="gira22" class="gira22">
                 <img src="../assets/enano.jpg" alt="enano" class="enano">
                 <iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/wjhxTWdqZVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe class="video2" width="560" height="315" src="https://www.youtube.com/embed/OspIA4akQeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </section>
+            </section>-->
         </main>
         <footer class="footer">
             <div class="redes">
@@ -47,5 +124,7 @@
             </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
         </footer>
+        <!--script bootstrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
