--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+        <!--link a bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!--link al css-->
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
@@ -16,33 +18,56 @@
     <body class="body">
         <header>
             <div class="nav">
-                <nav>
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="discografia.html">Discografia</a></li>
-                        <li><a href="galeria.html">Galeria</a></li>
-                        <li><a href="shows.html">Shows</a></li>
-                        <li><a href="bio.html">Bio</a></li>
-                    </ul>
+                <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="shows.html">Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
+                    </li>
+                </ul>
+                </div>
+                </div>
+                </div>
                 </nav>
             </div>
         </header> 
         <main>
-            <h2>15 Mayo - ESP / Barcelona, Razzmatazz 1</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-barcelona-773481">ENTERTICKET.ES</a>
-            <h2>18 Mayo - ESP / Gijón, Sala Acapulco</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-gijon-483721">ENTERTICKET.ES</a>
-            <h2>19 Mayo - ESP / Vigo, Rouge</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-vigo-194206">ENTERTICKET.ES</a>
-            <h2>21 Mayo - ESP / Madrid, Sala La Paqui</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-madrid-561903">ENTERTICKET.ES</a>
-            <h2>23 Mayo - ESP / Málaga, Sala Trinchera</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-malaga-209061">ENTERTICKET.ES</a>
-            <h2>24 Mayo - ESP / Murcia, Garaje Beat Club</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-murcia-444728">ENTERTICKET.ES</a>
-            <h2>26 Mayo - ESP / Almería, Berlín Social Club</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-almeria-915515">ENTERTICKET.ES</a>
-            <h2>28 Mayo - ESP / MAllorca, Es Gremi</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-mallorca-827105">ENTERTICKET.ES</a>
-            <h2>30 Mayo - ESP / Valencia, Repvlicca</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-valencia-393004">ENTERTICKET.ES</a>
-            <h2>01 Junio - DEU / Hamburg/ Uebel & Gefahrlich</h2><a href="https://lavelapuerca.shop/produkte/56540-tickets-la-vela-puerca-uebel-gefaehrlich-hamburg-am-01-06-2023">LAVELAPUERCA.SHOP</a>
-            <h2>02 Junio - DEU / Hanover/ Faust</h2><a href="https://lavelapuerca.shop/produkte/56541-tickets-la-vela-puerca-kulturzentrum-faust-60er-jahre-halle-hannover-am-02-06-2023">LAVELAPUERCA.SHOP</a>
-            <h2>03 Junio - DEU / Koln/ Gebaude 9</h2><a href="https://lavelapuerca.shop/produkte/56542-tickets-la-vela-puerca-gebaeude-9-koeln-am-03-06-2023">LAVELAPUERCA.SHOP</a>
-            <h2>06 Junio - DEU / Berlin/ SO36</h2><a href="https://lavelapuerca.shop/produkte/56543-tickets-la-vela-puerca-so36-berlin-am-06-06-2023">LAVELAPUERCA.SHOP</a>
-            <h2>16 Junio - CHI / Santiago/ Teatro Coliseo</h2><a href="https://www.puntoticket.com/evento/la-vela-puerca-teatro-coliseo-jun-2023">PUNTOTICKET.COM</a>
-            <h2>19 AGO - PAR / Asunción/ Snd Arena</h2><a href="https://ticketea.com.py/events/lvp-en-paraguay">TICKETEA.COM.PY</a>
+            <div class="divshows">
+                <h2>15 Mayo - ESP / Barcelona, Razzmatazz 1</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-barcelona-773481">ENTERTICKET.ES</a>
+                <h2>18 Mayo - ESP / Gijón, Sala Acapulco</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-gijon-483721">ENTERTICKET.ES</a>
+                <h2>19 Mayo - ESP / Vigo, Rouge</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-vigo-194206">ENTERTICKET.ES</a>
+                <h2>21 Mayo - ESP / Madrid, Sala La Paqui</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-madrid-561903">ENTERTICKET.ES</a>
+                <h2>23 Mayo - ESP / Málaga, Sala Trinchera</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-malaga-209061">ENTERTICKET.ES</a>
+                <h2>24 Mayo - ESP / Murcia, Garaje Beat Club</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-murcia-444728">ENTERTICKET.ES</a>
+                <h2>26 Mayo - ESP / Almería, Berlín Social Club</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-almeria-915515">ENTERTICKET.ES</a>
+                <h2>28 Mayo - ESP / MAllorca, Es Gremi</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-mallorca-827105">ENTERTICKET.ES</a>
+                <h2>30 Mayo - ESP / Valencia, Repvlicca</h2><a href="https://www.enterticket.es/eventos/la-vela-puerca-en-valencia-393004">ENTERTICKET.ES</a>
+                <h2>01 Junio - DEU / Hamburg/ Uebel & Gefahrlich</h2><a href="https://lavelapuerca.shop/produkte/56540-tickets-la-vela-puerca-uebel-gefaehrlich-hamburg-am-01-06-2023">LAVELAPUERCA.SHOP</a>
+                <h2>02 Junio - DEU / Hanover/ Faust</h2><a href="https://lavelapuerca.shop/produkte/56541-tickets-la-vela-puerca-kulturzentrum-faust-60er-jahre-halle-hannover-am-02-06-2023">LAVELAPUERCA.SHOP</a>
+                <h2>03 Junio - DEU / Koln/ Gebaude 9</h2><a href="https://lavelapuerca.shop/produkte/56542-tickets-la-vela-puerca-gebaeude-9-koeln-am-03-06-2023">LAVELAPUERCA.SHOP</a>
+                <h2>06 Junio - DEU / Berlin/ SO36</h2><a href="https://lavelapuerca.shop/produkte/56543-tickets-la-vela-puerca-so36-berlin-am-06-06-2023">LAVELAPUERCA.SHOP</a>
+                <h2>16 Junio - CHI / Santiago/ Teatro Coliseo</h2><a href="https://www.puntoticket.com/evento/la-vela-puerca-teatro-coliseo-jun-2023">PUNTOTICKET.COM</a>
+                <h2>19 AGO - PAR / Asunción/ Snd Arena</h2><a href="https://ticketea.com.py/events/lvp-en-paraguay">TICKETEA.COM.PY</a>
+            </div>
         </main>
         <footer class="footer">
             <div class="redes">
@@ -55,5 +80,7 @@
             </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
         </footer>
+        <!--script bootstrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
