add modificaciones en footer

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -115,12 +115,12 @@
         </main>
         <footer class="footer">
             <div class="redes">
-                <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a></span>
-                <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify" style="color: #ffffff;"></i></a></span>
+                <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
+                <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/"><i class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
+                <span><a href="https://twitter.com/LaVela_Oficial"><i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
+                <span><a href="https://www.tiktok.com/@lavelapuercaoficial"><i class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
+                <span><a href="https://www.youtube.com/user/velapuercavideos"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
+                <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL"><i class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
             </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
         </footer>
