--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -20,7 +20,6 @@
             <div class="nav">
                 <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -30,7 +29,8 @@
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
+                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
                      <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
                     </li>
@@ -51,22 +51,104 @@
             </div>
         </header>
         <main>
-            <section class="discografiacontainer">
-                <img src="../assets/1998-velapuerca-deskarado.jpg" alt="1998 Desakarado" class="discografiaitems">
-                <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg" alt="2001 De Bichos y Flores" class="discografiaitems">
-                <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="2004 A Contraluz" class="discografiaitems">
-                <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="2007 El Impulso" class="discografiaitems">
-                <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="2011 Piel y Hueso" class="discografiaitems">
-                <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="2013 Pasaje Salvo" class="discografiaitems">
-                <img src="../assets/2014-velapuerca-erase.jpg" alt="2014 Erase" class="discografiaitems">
-                <img src="../assets/2018-velapuerca-destilar.jpg" alt="2018 Destilar" class="discografiaitems">
-                <img src="../assets/2022-velapuerca-discopatico.jpg" alt="2022 Discopatico" class="discografiaitems">
-                <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg" alt="2009 Normalmente Anormal" class="discografiaitems">
-                <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg" alt="2014 Uno Para Todos" class="discografiaitems">
-                <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg" alt="2017 Festejar Para Sobrevivir" class="discografiaitems">
-                
-            </section>
-
+            <div class="discografiacontainergeneral">
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/1998-velapuerca-deskarado.jpg" alt="1998 Desakarado" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Deskarado 1998</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg" alt="2001 De Bichos y Flores" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>De Bichos y Flores 2001</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="2004 A Contraluz" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>A Contralux 2004</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="2007 El Impulso" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>El Impulso 2007</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="2011 Piel y Hueso" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Piel y Hueso 2011</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="2013 Pasaje Salvo" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Pasaje Salvo 2013</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2014-velapuerca-erase.jpg" alt="2014 Erase" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Erase 2014</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2018-velapuerca-destilar.jpg" alt="2018 Destilar" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Destilar 2018</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2022-velapuerca-discopatico.jpg" alt="2022 Discopatico" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Discopatico 2022</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg" alt="2009 Normalmente Anormal" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Normalmente Anormal 2009</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg" alt="2014 Uno Para Todos" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Uno para Todos 2014</p>
+                    </div>
+                </div>
+                <div class="discografiacontainer">
+                    <div>
+                        <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg" alt="2017 Festejar Para Sobrevivir" class="discografiaitems">
+                    </div>
+                    <div class="parrafos">
+                            <p>Festejar para Sobrevivir 2017</p>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="footer">
             <div class="redes">
