--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -20,7 +20,6 @@
             <div class="nav">
                 <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -30,7 +29,8 @@
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
+                  <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
                     </li>
@@ -105,14 +105,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-            <!--<section class="galeria">
-                <img src="../assets/lavela.jpg" alt="banda" class="banda">
-                <img src="../assets/LaVelaPerca-en-gira-2022.jpg" alt="gira22" class="gira22">
-                <img src="../assets/enano.jpg" alt="enano" class="enano">
-                <iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/wjhxTWdqZVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <iframe class="video2" width="560" height="315" src="https://www.youtube.com/embed/OspIA4akQeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </section>-->
-        </main>
+      </main>
         <footer class="footer">
             <div class="redes">
                 <span><a href="https://www.instagram.com/lavela_oficial/"><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
