--- a/pages/shows.html
+++ b/pages/shows.html
@@ -20,7 +20,6 @@
             <div class="nav">
                 <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -30,7 +29,8 @@
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
+                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
                     </li>
