--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--link aos style-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--link favicon-->
+    <link rel="shortcut icon" href="assets/logo-white.png">
     <!--link al css-->
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
