--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -13,6 +13,8 @@
   <!--link a bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <!--link favicon-->
+  <link rel="shortcut icon" href="../assets/logo-white.png">
   <!--link al css-->
   <link rel="stylesheet" href="../css/style.css">
   <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
