--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -5,6 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--seo meta tags-->
+    <meta name="description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página verás el nombre y año de todos los discos publicados por la banda. Además encontrarás información de sus próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera. También podrás acceder a la escucha previa de su último disco titulado Discopatico.">
+    <meta name="keywords" content="musica, rock, banda, velapuerca, discografia, shows, uruguay, grupo">
+    <!-- Primary Meta Tags -->
+    <title>Discografia</title>
+    <meta name="title" content="Discografia">
+    <meta name="description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página verás el nombre y año de todos los discos publicados por la banda. Además encontrarás información de sus próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera. También podrás acceder a la escucha previa de su último disco titulado Discopatico.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.facebook.com/LaVelaPuerca.OFICIAL/">
+    <meta property="og:title" content="Discografia">
+    <meta property="og:description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página verás el nombre y año de todos los discos publicados por la banda. Además encontrarás información de sus próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera. También podrás acceder a la escucha previa de su último disco titulado Discopatico.">
+    <meta property="og:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda.">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://twitter.com/LaVela_Oficial">
+    <meta property="twitter:title" content="Discografia">
+    <meta property="twitter:description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página verás el nombre y año de todos los discos publicados por la banda. Además encontrarás información de sus próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera. También podrás acceder a la escucha previa de su último disco titulado Discopatico.">
+    <meta property="twitter:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda">
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +66,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
                                 <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
-                                        width="40px"></a>
+                                        width="40px" alt="Logo de la banda."></a>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page"
                                         href="discografia.html">Discografía</a>
@@ -50,7 +75,8 @@
                                     <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="shows.html" style="color:#fbfb08">Shows</a>
+                                    <a class="nav-link active" aria-current="page" href="shows.html"
+                                        style="color:#fbfb08">Shows</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
@@ -66,7 +92,8 @@
         <div class="discografiacontainergeneral">
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/1998-velapuerca-deskarado.jpg" alt="1998 Desakarado" class="discografiaitems">
+                    <img src="../assets/1998-velapuerca-deskarado.jpg" alt="Disco de 1998 llamado Deskarado"
+                        class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>Deskarado 1998</p>
@@ -74,8 +101,8 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg" alt="2001 De Bichos y Flores"
-                        class="discografiaitems">
+                    <img src="../assets/2001-velapuerca-de-bichos-y-flores.jpg"
+                        alt="Disco de 2001 llamado De Bichos y Flores" class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>De Bichos y Flores 2001</p>
@@ -83,7 +110,7 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="2004 A Contraluz"
+                    <img src="../assets/2004-velapuerca-a-contraluz.jpg" alt="Disco de 2004 llamado A Contraluz"
                         class="discografiaitems">
                 </div>
                 <div class="parrafos">
@@ -92,7 +119,8 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="2007 El Impulso" class="discografiaitems">
+                    <img src="../assets/2007-velapuerca-el-impulso.jpg" alt="Disco de 2007 llamado El Impulso"
+                        class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>El Impulso 2007</p>
@@ -100,7 +128,7 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="2011 Piel y Hueso"
+                    <img src="../assets/2011-lavelapuerca-piel-y-hueso.jpg" alt="Disco de 2011 llamado Piel y Hueso"
                         class="discografiaitems">
                 </div>
                 <div class="parrafos">
@@ -109,7 +137,7 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="2013 Pasaje Salvo"
+                    <img src="../assets/2013-velapuerca-pasaje-salvo.jpg" alt="Disco EP de 2013 llamado Pasaje Salvo"
                         class="discografiaitems">
                 </div>
                 <div class="parrafos">
@@ -118,7 +146,8 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2014-velapuerca-erase.jpg" alt="2014 Erase" class="discografiaitems">
+                    <img src="../assets/2014-velapuerca-erase.jpg" alt="Disco de 2014 llamado Erase"
+                        class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>Erase 2014</p>
@@ -126,7 +155,8 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2018-velapuerca-destilar.jpg" alt="2018 Destilar" class="discografiaitems">
+                    <img src="../assets/2018-velapuerca-destilar.jpg" alt="Disco de 2018 llamado Destilar"
+                        class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>Destilar 2018</p>
@@ -134,7 +164,7 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2022-velapuerca-discopatico.jpg" alt="2022 Discopatico"
+                    <img src="../assets/2022-velapuerca-discopatico.jpg" alt="Disco de 2022 llamado Discopatico"
                         class="discografiaitems">
                 </div>
                 <div class="parrafos">
@@ -143,8 +173,8 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg" alt="2009 Normalmente Anormal"
-                        class="discografiaitems">
+                    <img src="../assets/2009-velapuerca-normalmente-anormal-2.jpg"
+                        alt="Primer DVD de la banda del año 2009 llamado Normalmente Anormal" class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>Normalmente Anormal 2009</p>
@@ -152,8 +182,8 @@
             </div>
             <div class="discografiacontainer">
                 <div>
-                    <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg" alt="2014 Uno Para Todos"
-                        class="discografiaitems">
+                    <img src="../assets/2014-velapuerca-uno-para-todos-3.jpg"
+                        alt="Segundo DVD+2 discos en vivo del año 2014 llamado Uno Para Todos" class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>Uno para Todos 2014</p>
@@ -162,7 +192,8 @@
             <div class="discografiacontainer">
                 <div>
                     <img src="../assets/2017-velapuerca-festejar-para-sobrevivir-3.jpg"
-                        alt="2017 Festejar Para Sobrevivir" class="discografiaitems">
+                        alt="Ultimo DVD en vivo publicado del año 2017 llamado Festejar Para Sobrevivir"
+                        class="discografiaitems">
                 </div>
                 <div class="parrafos">
                     <p>Festejar para Sobrevivir 2017</p>
