--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,6 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--seo meta tags-->
+    <meta name="description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página encontrarás información de dónde se estarán presentando y links donde comprar las entredas. Además encontrarás información acerca de su dicografía, escuchar un demo del disco Discopatico y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+    <meta name="keywords" content="musica, rock, banda, velapuerca, discografia, shows, uruguay, grupo">
+    <!-- Primary Meta Tags -->
+    <title>Shows</title>
+    <meta name="title" content="Shows">
+    <meta name="description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página encontrarás información de dónde se estarán presentando y links donde comprar las entredas. Además encontrarás información acerca de su dicografía, escuchar un demo del disco Discopatico y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.facebook.com/LaVelaPuerca.OFICIAL/">
+    <meta property="og:title" content="Shows">
+    <meta property="og:description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página encontrarás información de dónde se estarán presentando y links donde comprar las entredas. Además encontrarás información acerca de su dicografía, escuchar un demo del disco Discopatico y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+    <meta property="og:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda.">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://twitter.com/LaVela_Oficial">
+    <meta property="twitter:title" content="Shows">
+    <meta property="twitter:description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página encontrarás información de dónde se estarán presentando y links donde comprar las entredas. Además encontrarás información acerca de su dicografía, escuchar un demo del disco Discopatico y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+    <meta property="twitter:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda">
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +66,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
                                 <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
-                                        width="40px"></a>
+                                        width="40px" alt="Logo de la banda."></a>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page"
                                         href="discografia.html">Discografía</a>
@@ -50,7 +75,8 @@
                                     <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="shows.html" style="color:#fbfb08">Shows</a>
+                                    <a class="nav-link active" aria-current="page" href="shows.html"
+                                        style="color:#fbfb08">Shows</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
