--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,7 +5,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--google font-->
+  <!--seo meta tags-->
+  <meta name="description"
+    content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página podrás ver una galería de imagenes de la banda a lo largo de los años y algunos videos publicados. Además encontrarás información acerca de su dicografía, esuchar el último disco, ver donde serán los próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+  <meta name="keywords" content="musica, rock, banda, velapuerca, discografia, shows, uruguay, grupo">
+  <!-- Primary Meta Tags -->
+  <title>Galeria</title>
+  <meta name="title" content="Galeria">
+  <meta name="description"
+    content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página podrás ver una galería de imagenes de la banda a lo largo de los años y algunos videos publicados. Además encontrarás información acerca de su dicografía, esuchar el último disco, ver donde serán los próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.facebook.com/LaVelaPuerca.OFICIAL/">
+  <meta property="og:title" content="Galeria">
+  <meta property="og:description"
+    content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página podrás ver una galería de imagenes de la banda a lo largo de los años y algunos videos publicados. Además encontrarás información acerca de su dicografía, esuchar el último disco, ver donde serán los próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+  <meta property="og:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda.">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://twitter.com/LaVela_Oficial">
+  <meta property="twitter:title" content="Galeria">
+  <meta property="twitter:description"
+    content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página podrás ver una galería de imagenes de la banda a lo largo de los años y algunos videos publicados. Además encontrarás información acerca de su dicografía, esuchar el último disco, ver donde serán los próximos shows y parte de su biografía y colaboraciones con otros artistas a lo largo de su carrera.">
+  <meta property="twitter:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap"
@@ -39,7 +63,8 @@
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"
+                    alt="Logo de la banda."></a>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
                 </li>
@@ -75,28 +100,30 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../assets/lavela.jpg" class="d-block w-100" alt="...">
+          <img src="../assets/lavela.jpg" class="d-block w-100"
+            alt="La banda completa en 2007 luego de sacar el disco El Impuslo en una gira por europa">
           <div class="carousel-caption d-none d-md-block">
             <h5>La banda completa en 2007</h5>
             <p>Luego de sacar "El Impuslo" en una gira por europa.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../assets/LaVelaPerca-en-gira-2022.jpg" class="d-block w-100" alt="...">
+          <img src="../assets/LaVelaPerca-en-gira-2022.jpg" class="d-block w-100"
+            alt="El Enano y el Cebolla los cantantes de la banda.">
           <div class="carousel-caption d-none d-md-block">
             <h5>El "Enano" y el "Cebolla"</h5>
             <p>El dúo se mantiene unido desde el primer día.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../assets/enano.jpg" class="d-block w-100" alt="...">
+          <img src="../assets/enano.jpg" class="d-block w-100" alt="El Enano en solitario cantando">
           <div class="carousel-caption d-none d-md-block">
             <h5>El "Enano"</h5>
             <p>En una etapa más madura, dedica una parte de cada show para cantar solo con el público.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <iframe class="d-block w-100" alt="..." width="100%" height="700"
+          <iframe class="d-block w-100" alt="Video 1" width="100%" height="700"
             src="https://www.youtube.com/embed/wjhxTWdqZVQ" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
@@ -106,7 +133,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <iframe class="d-block w-100" alt="..." width="100%" height="700"
+          <iframe class="d-block w-100" alt="Video 2" width="100%" height="700"
             src="https://www.youtube.com/embed/OspIA4akQeI" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
