add title redes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2 class="animate__animated animate__bounceIn animate__repeat-2">Escuchá Discopatico</h2>
         </div>
         <div class="discopaticoindex">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="100%" height="400" frameBorder="10" allowfullscreen="100"
+            <iframe title="Discopatico en Spotify" style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="100%" height="400" frameBorder="10" allowfullscreen="100"
                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"
                 data-aos="fade-up"></iframe>
         </div>
@@ -109,17 +109,17 @@
 
     <footer class="footer">
         <div class="redes">
-            <span><a href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
+            <span><a title="Instagram" href="https://www.instagram.com/lavela_oficial/" alt="Pagina oficial de Instagram"><i
                         class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
+            <span><a title="Facebook" href="https://www.facebook.com/LaVelaPuerca.OFICIAL/" alt="Pagina oficial de Facebook"><i
                         class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
+            <span><a title="Twitter" href="https://twitter.com/LaVela_Oficial" alt="Pagina oficial de Twitter"><i
                         class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
+            <span><a title="TikTok" href="https://www.tiktok.com/@lavelapuercaoficial" alt="Pagina oficial de tiktok"><i
                         class="fa-brands fa-tiktok fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
+            <span><a title="YouTube" href="https://www.youtube.com/user/velapuercavideos" alt="Pagina oficial de youtube"><i
                         class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></span>
-            <span><a href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
+            <span><a title="Spotify" href="https://open.spotify.com/artist/6nVcjUJemqpJjc1WevwTvL" alt="Link cuenta de spotify"><i
                         class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i></a></span>
         </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
