add ultimos retoques del nav

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <div class="nav">
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img src="assets/logo-white.png" width="40px"
+                        alt="Logo de la banda."></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                         aria-label="Toggle navigation">
@@ -63,14 +65,12 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel"></h5>
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menú Velero</h5>
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
-                                <a class="navbar-brand" href="index.html"><img src="assets/logo-white.png" width="40px"
-                                        alt="Logo de la banda."></a>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page"
                                         href="pages/discografia.html">Discografía</a>
@@ -98,12 +98,11 @@
             <h1 class="animate__animated animate__bounceInDown">La Vela Puerca</h1>
         </section>
         <div class="escuchaindex">
-            <h2 class="animate__animated animate__bounceIn animate__repeat-2">Escuchá Discopatico</h2>
+            <h2 class="animate__animated animate__pulse animate__infinite">Escuchá Discopatico</h2>
         </div>
         <div class="discopaticoindex">
             <iframe title="Discopatico en Spotify" style="border-radius:12px" src="https://open.spotify.com/embed/album/0tjbeQCarEUtbhlyyCRp0r?utm_source=generator&theme=0" alt="Link a disco Discopatico en spotify." width="100%" height="400" frameBorder="10" allowfullscreen="100"
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"
-                data-aos="fade-up"></iframe>
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </main>
 
