--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -51,6 +51,8 @@
         <div class="nav">
             <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
                 <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
+                        width="40px" alt="Logo de la banda."></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                         aria-label="Toggle navigation">
@@ -59,14 +61,12 @@
                     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                         aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel"></h5>
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menú Velero</h5>
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
-                                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
-                                        width="40px" alt="Logo de la banda."></a>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page"
                                         href="discografia.html">Discografía</a>
